[build-system]
requires = ["setuptools >= 64"]
build-backend = "setuptools.build_meta"

[project]
name = "redisgl"
version = "0.1.0"
authors = [
    {name = "Toki Migimatsu", email = "takatoki@cs.stanford.edu"}
]
description = "Redis-based robot visualizer"
dependencies = ["redis", "ctrlutils", "spatialdyn"]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[tool.setuptools]
packages = ["redisgl"]
